prepare for flask

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,14 +13,14 @@
 
 <body>
 
-  <div class="main-content">  
+  <div class="container main-content">  
 
     <div class="container main-content-container">
 
 
       <div class="row">
-        <div class="col-lg-2"></div>
-        <div class="col-lg-8 col-xs-12 content">
+        <div class="col-lg-1"></div>
+        <div class="col-lg-10 col-xs-12 content">
           <div class="top-details">
             <img src="{{ url_for('static', filename='story.png') }}" class="icon" />
       
@@ -76,7 +76,7 @@
           </form>
 
         </div>
-        <div class="col-lg-2"></div>
+        <div class="col-lg-1"></div>
       </div>
   
   
