add env, fix scroll

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -147,7 +147,10 @@
 
 <script>
 
-  location.hash = "#" + "story" 
+  var story =  document.getElementById('story');
+  if (typeof(story) != 'undefined' && story != null){
+    location.hash = "#" + "story" 
+  }
   
 
   var modal = document.getElementById("modal");
