--- a/app/static/css/ai_pages.css
+++ b/app/static/css/ai_pages.css
@@ -1,19 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
-
-body,
-input {
-  font-size: 16px;
-  line-height: 24px;
-  color: #353740;
-  font-family: "Inter", Helvetica, sans-serif;
-}
-body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-}
-
 .main-content {
   display: flex;
   align-items: center;
@@ -22,32 +6,28 @@ body {
   padding: 10px;
 }
 
-@media only screen and (min-height: 768px) and (min-width: 768px){
-
+@media only screen and (min-height: 768px) and (min-width: 768px) {
   .main-content {
-    height: 100vh
+    height: 100vh;
   }
-
 }
 
 .icon {
-
   width: 34px;
 }
 h3 {
   font-size: 32px;
   line-height: 40px;
   font-weight: bold;
-  color: #202123;
+  color: rgba(255, 255, 255, 0.75);
   margin: 16px 0 40px;
   margin-bottom: 30px;
-
 }
 
 h5 {
   font-weight: normal;
-  color: rgba(0, 0, 0, 0.6);
-  font-size: 18px;
+  color: rgba(255, 255, 255, 0.8);
+   font-size: 18px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -59,16 +39,13 @@ h5 {
 .red-warning {
   margin-top: 20px;
   margin-bottom: 30px;
-  color: #C0392B;
-  
+  color: #c0392b;
 }
 form {
-
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-
 }
 
 .input-group {
@@ -84,17 +61,19 @@ form {
 .content {
   border: 1px solid rgba(0, 0, 0, 0.2);
   /* -webkit-box-shadow: 0 0 5px 8px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: 0 0 5px 8px rgba(0, 0, 0, 0.1);
-  box-shadow: 0 0 5px 15px rgba(0, 0, 0, 0.1); */
+    -moz-box-shadow: 0 0 5px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 5px 15px rgba(0, 0, 0, 0.1); */
   padding: 5px 50px;
   border-radius: 10px;
 }
 
 input[type="text"] {
   padding: 12px 16px;
-  border: 1px solid #10a37f;
   border-radius: 4px;
   width: 100%;
+  background-color: transparent;
+  border: 1px solid #1F618D;
+  color: white;
 }
 
 ::placeholder {
@@ -102,30 +81,20 @@ input[type="text"] {
   opacity: 1;
 }
 
-input[type=submit] {
+input[type="submit"] {
   margin-bottom: 15px;
   margin-top: 30px;
 }
 
-.primary-btn {
-  padding: 12px 0;
-  color: #fff;
-  background-color: #10a37f;
-  border: none;
-  border-radius: 4px;
-  text-align: center;
-  cursor: pointer;
-  width: 250px;
-}
 
 
 .result-container {
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 20px;
   padding: 40px;
 
   width: 80%;
-  
+
   font-size: 24px;
   line-height: 48px;
   margin-bottom: 50px;
@@ -135,7 +104,6 @@ input[type=submit] {
   justify-content: center;
 
   margin-top: 50px;
-
 }
 
 .ai-label {
@@ -148,7 +116,7 @@ input[type=submit] {
 }
 
 .how-it-works {
-  color: rgba(0, 0, 0, 0.3);
+  color: rgba(255, 255, 255, 0.6);
   font-weight: bold;
   text-decoration: underline;
   font-size: 16px;
