--- a/app/static/css/modal.css
+++ b/app/static/css/modal.css
@@ -8,28 +8,31 @@
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  background-color: rgba(0, 0, 0, 0.5);
   padding: 20px;
   border-radius: 10px;
 }
 
 /* Modal Content */
 .modal-content {
-  background-color: #fefefe;
+  background-color: black;
   margin: auto;
   padding: 20px;
   border: 1px solid #888;
+  border-radius: 15px;
   width: 80%;
-  font-size: 16px;
-  line-height: 32px;
+  font-size: 1.2em;
+  line-height: 1.8em;
+  font-weight: 500;
   text-align: justify;
   top: 50%;
   -ms-transform: translateY(-50%);
-  transform: translateY(-50%);}
+  transform: translateY(-50%);
+}
 
 /* The Close Button */
 .close {
-  color: #aaaaaa;
+  color: rgba(255, 255, 255, 0.6);
   float: right;
   font-size: 28px;
   font-weight: bold;
@@ -37,7 +40,7 @@
 
 .close:hover,
 .close:focus {
-  color: #000;
+  color: rgba(255, 255, 255, 0.8);
   text-decoration: none;
   cursor: pointer;
 }
