--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,178 +6,153 @@
     href="{{ url_for('static', filename='dog.png') }}"
   />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}" />
-  <link rel="stylesheet" href="{{ url_for('static', filename='modal.css') }}" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" />
+
+  <style>
+
+
+
+    .hero {
+        margin-bottom: 3em;
+    }
+
+    .hero h1 {
+        margin-bottom: 0.75em;
+    }
+
+    .hero h4 {
+        color: rgba(255, 255, 255, 0.8);
+    }
+
+    @media only screen and (min-width: 768px) {
+        .hero {
+            padding: 0 8em;
+        }
+    }
+
+    .detail-container {
+        min-height: 250px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 1.5em;
+        margin-bottom: 1.5em;
+        color: white;
+        background-color: #1F618D;
+    }
+
+    .detail-container .icon {
+        width: 75px;
+        margin-top: 1.5em;
+        margin-bottom: 0.5em;
+    }
+
+    .detail-container .desc {
+        flex-grow: 1;
+    }
+
+    .desc {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 1.8em;
+    }
+
+    .desc h4 {
+        font-size: 1.6em;
+        font-weight: bold;
+    }
+
+    .desc h5 {
+        font-size: 1.2em;
+        padding: 0 4em;
+        font-weight: 400;
+        line-height: 1.8em;
+        font-weight: 500;
+    }
+
+    .detail-container .primary-btn {
+        border: 3px solid white;
+        background-color: transparent;
+        font-weight: bold;
+        font-size: 1.25em;
+    }
+
+    .ai-hero {
+        font-size: 1.5em;
+        color: #1F618D;
+        margin: 0;
+        margin-bottom: 0.1em;
+        font-weight: bold;
+    }
+
+
+  </style>
 
 </head>
 
+
 <body>
 
-  <div class="container main-content">  
+    <main>
+        <div class="container">
 
-    <div class="container main-content-container">
+            <div class="hero">
 
-
-      <div class="row">
-        <div class="col-lg-1"></div>
-        <div class="col-lg-10 col-xs-12 content">
-          <div class="top-details">
-            <img src="{{ url_for('static', filename='story.png') }}" class="icon" />
-      
-            <h3>
-              
-              Make AI Generate Short Stories
-            </h3>
-      
-          </div>
-          <h5 class=""> Have you ever come across a striking word that was begging to be in an epic adventure or an exotic tale, but haven't been able to do it yourself? <br/>
-            <br/> 
-            <b> Let state-of-the-art AI do it for you instead!  </b> 
-            <br/><br/>
-            Enter 4 words in the boxes below and see what unique, never-seen-before short story featuring all four of those words the almighty algorithm will offer:
-          </h5>
-
-          {% if redirectedByUnsafeWord %}
-            <p class = "red-warning">
-              ❗️ It seems like you entered a word that is not allowed by the website. Please refrain from using such language. 
-            </p>
-          {% endif %}
-
-
-          <form action="/" method="post">
-
-            <div class="input-group">
-
-              {% if words %}
-
-                <input type="text" name="story-prompt-1" placeholder="Word 1" value = {{ words[0] }} required />
-                <input type="text" name="story-prompt-2" placeholder="Word 2" value = {{ words[1] }} required />
-                <input type="text" name="story-prompt-3" placeholder="Word 3" value = {{ words[2] }} required />
-                <input type="text" name="story-prompt-4" placeholder="Word 4" value = {{ words[3] }} required />
-
-
-              {% else %}
-
-                <input type="text" name="story-prompt-1" placeholder="Word 1" required />
-                <input type="text" name="story-prompt-2" placeholder="Word 2" required />
-                <input type="text" name="story-prompt-3" placeholder="Word 3" required />
-                <input type="text" name="story-prompt-4" placeholder="Word 4" required />
-
-              {% endif %}
-
-
-
-
-              
+                <p class="ai-hero">AI DAY 2022</p>
+    
+                <h1> Make AI read, write, and create for you </h1>
+                <h4>Use state-of-the-art natural language models to generate original pieces of text based on prompts that you enter </h4>
+            
             </div>
+    
+    
+                <div class="row">
+                    <div class="col-md-6 col-xs-12">
+                        <div class="main-box detail-container">
+                            <div class="desc">
+                                <h4>Generate stories with words</h4>
+                                <img class = "icon" src="{{ url_for('static', filename = 'icons/storywriting.png')}}" alt="" srcset="">
+                                <h5>Enter four words and have AI automatically generate a short story using all of them. </h5>
+                            </div>
+                            <a href="/story">
+                                <button class="primary-btn" href = "/story">Open</button>
 
-      
-            <input type="submit" value="Generate story" / class = "primary-btn">
-          </form>
+                            </a>
+    
+                        </div>
+                    </div>
+    
+                    <div class="col-md-6 col-xs-12">
+                        <div class="main-box detail-container">
+                            <div class="desc">
+                                <h4>Complete paragraphs</h4>
+                                <img class = "icon" src="{{ url_for('static', filename = 'icons/fillin.png')}}" alt="" srcset="">
+                                <h5>Write the first sentence and last sentence of a paragraph and have AI fill in the gap.  </h5>
+                            </div>
 
+                            <a href="/complete">
+                                <button class="primary-btn">Open</button>
+                            </a>    
+    
+                        </div>
+                    </div>
+                </div>
+    
         </div>
-        <div class="col-lg-1"></div>
-      </div>
-  
-  
+    </main>
 
-  
 
-  
+
+    <div class="pin-bottom">
+
+        <div class="container">
+            Created for TSRS Moulsari AI Day 2022 by Arjun Sharma
+        </div>
+
+
     </div>
-  </div>
-
-
-
-  {% if result %}
-
-  <div class="show-if-results" id = "story">
-
-    <div class="container result-container" id = "result">
-      <h3 class = "ai-label">Here's what the AI model came up with: </h3>
-      <div class="result">{{ result }}</div>
-  
-    </div>
-
-    <a href = "/">
-      <btn class="primary-btn clear-btn" href = "/">
-
-        Clear
-          
-      </btn>
-    </a>
-
-  </div>
-
-  <div class="container">
-    <p class = "how-it-works" id = "about-modal-btn"> 
-      More about how the site works
-    </p>
-  </div>
-
-  {% endif %}
-
-  <div class="modal" id = "modal">
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <p> 
-        This site is powered by a language model called <b> GPT-3 (Generative Pre-trained Transformer 3). </b>
-        A language model is a machine learning model that is used to predict the next word in a sequence of words. Language models are trained on large amounts of text data, and the predictions they make can be used to generate new text or to understand the context of a piece of text.
-        GPT-3 is a language model that was trained on a dataset of over one billion words. The dataset includes a wide variety of texts, including books, articles, and websites. 
-        
-        <br> <br> 
-        GPT-3 is better than its predecessor, GPT-2, and other language models, in several ways: it has a larger training set, it uses more sophisticated methods to make predictions, and it can handle longer sequences of words.
-      The potential weak points of GPT-3 include its reliance on statistical methods (which can be biased), its lack of understanding of grammar and syntax (which can lead to errors in prediction), and its limited vocabulary (which may limit its ability to generate new text).
-        
-        <br> <br>
-
-        <em> 
-          The description of GPT-3 that you just read was in itself written by GPT-3. 
-          <br> 
-          This website was coded using the Flask framework for Python by Arjun Sharma. 
-        </em> 
-        
-      </p>
-    </div>
-  </div>
-
-
 
 </body>
-
-<script>
-
-  var story =  document.getElementById('story');
-  if (typeof(story) != 'undefined' && story != null){
-    location.hash = "#" + "story" 
-  }
-  
-
-  var modal = document.getElementById("modal");
-
-// Get the button that opens the modal
-  var btn = document.getElementById("about-modal-btn");
-
-  // Get the <span> element that closes the modal
-  var span = document.getElementsByClassName("close")[0];
-
-  // When the user clicks on the button, open the modal
-  btn.onclick = function() {
-    modal.style.display = "block";
-  }
-
-  // When the user clicks on <span> (x), close the modal
-  span.onclick = function() {
-    modal.style.display = "none";
-  }
-
-  // When the user clicks anywhere outside of the modal, close it
-  window.onclick = function(event) {
-    if (event.target == modal) {
-      modal.style.display = "none";
-    }
-  }
-
-  
-
-</script>
