--- a/app/templates/complete.html
+++ b/app/templates/complete.html
@@ -28,15 +28,15 @@
       
             <h3>
               
-              Make AI Generate Short Stories
+              Make AI Complete Your Thoughts
             </h3>
       
           </div>
-          <h5 class=""> Have you ever come across a striking word that was begging to be in an epic adventure or an exotic tale, but haven't been able to do it yourself? <br/>
+          <h5 class=""> They say that the best of friends can complete each other's thoughts.  <br/>
             <br/> 
-            <b> Let state-of-the-art AI do it for you instead!  </b> 
+            <b> Find out whether AI passes that test! </b> 
             <br/><br/>
-            Enter 4 words in the boxes below and see what unique, never-seen-before short story featuring all four of those words the almighty algorithm will offer:
+            Enter the first and last sentences of the paragraphs in the fields below. AI will fill in everything in between. 
           </h5>
 
           {% if redirectedByUnsafeWord %}
@@ -50,18 +50,8 @@
 
             <div class="input-group">
 
-                {% if result %}
-
-                <input type = "text" name="sentence-1" placeholder="Your second sentence" required>
-                <input type = "text" name="sentence-2" placeholder="Your second sentence" required>
-
-                {% else %}
-
-                <input type = "text" name="sentence-1" placeholder="Your second sentence" required>
-                <input type = "text" name="sentence-2" placeholder="Your second sentence" required>
-
-                {% endif %}
-
+                <input type = "text" name="sentence-1" placeholder="The paragraph's first sentence" required>
+                <input type = "text" name="sentence-2" placeholder="The paragraph's last sentence" required>
                 
             </div>
 
