--- a/app/templates/complete.html
+++ b/app/templates/complete.html
@@ -36,7 +36,7 @@
             <br/> 
             <b> Find out whether AI passes that test! </b> 
             <br/><br/>
-            Enter the first and last sentences of the paragraphs in the fields below. AI will fill in everything in between. 
+            Enter the first and last sentences of a paragraph in the fields below. AI will fill in everything in between and complete the paragraph.  
           </h5>
 
           {% if redirectedByUnsafeWord %}
