--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title>AI Story Generator</title>
+  <title>AI-Powered Language Generation</title>
   <link
     rel="shortcut icon"
     href="{{ url_for('static', filename='dog.png') }}"
