--- a/app/templates/story.html
+++ b/app/templates/story.html
@@ -16,6 +16,15 @@
 
 <body>
 
+  <div>
+    <div class="container">
+      Back to home page
+    </div>
+  </div>
+
+  <main>
+
+
   <div class="container main-content">  
 
     <div class="container main-content-container">
@@ -89,8 +98,6 @@
     </div>
   </div>
 
-
-
   {% if result %}
 
   <div class="show-if-results" id = "result">
@@ -143,7 +150,17 @@
     </div>
   </div>
 
+  </main>
 
+
+  <div class="pin-bottom">
+
+    <div class="container">
+        Created for TSRS Moulsari AI Day 2022 by Arjun Sharma
+    </div>
+
+
+</div>
 
 </body>
 
