--- a/app/templates/complete.html
+++ b/app/templates/complete.html
@@ -31,6 +31,9 @@
 <body>
   <main>
     <div class="container main-content">
+      <div class="container backlink">
+        <a href="/">Back to home page</a>
+        </div>
       <div class="container main-content-container">
         <div class="row">
           <div class="col-lg-1"></div>
