--- a/app/templates/story.html
+++ b/app/templates/story.html
@@ -16,16 +16,16 @@
 
 <body>
 
-  <div>
-    <div class="container">
-      Back to home page
-    </div>
-  </div>
+
 
   <main>
 
 
   <div class="container main-content">  
+
+      <div class="container backlink">
+      <a href="/">Back to home page</a>
+      </div>
 
     <div class="container main-content-container">
 
