--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -58,6 +58,10 @@ main {
   font-weight: bold;
 }
 
+.pin-bottom .container {
+  padding-bottom: 1.5em;
+}
+
 .backlink, .backlink a {
   color: rgba(255, 255, 255, 0.3);
   text-decoration: none;
