--- a/app/templates/complete.html
+++ b/app/templates/complete.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>AI Paragraph Completer</title>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link
     rel="shortcut icon"
     href="{{ url_for('static', filename='dog.png') }}"
