--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>AI-Powered Language Generation</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link
     rel="shortcut icon"
     href="{{ url_for('static', filename='dog.png') }}"
